--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recharts": "^2.12.7"
+    "recharts": "^2.13.0-alpha.4",
+    "uniqolor": "^1.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
